test/libsolidity/syntaxTests/abstract/abstract_only.sol
abstract
// ----
// ParserError 3515: (9-9): Expected keyword "contract", "interface" or "library".
// ParserError 2314: (9-9): Expected identifier but got end of source
